crates/capsec/tests/compile_fail/context_duplicate_perm.stderr
error: duplicate permission type 'FsRead' — each permission can only appear once in a context struct
 --> tests/compile_fail/context_duplicate_perm.rs:7:8
  |
7 |     b: FsRead,
  |        ^^^^^^

warning: unused import: `capsec::prelude::*`
 --> tests/compile_fail/context_duplicate_perm.rs:2:5
  |
2 | use capsec::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
